<resources>
    <string name="app_name">Panjab Bharti</string>
    <string name="no_jobs">No Jobs Available At Moment</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_such_department_exists">No Such Department Exists</string>
    <string name="welcome_to_panjab_bharti">Welcome to Panjab Bharti</string>
    <string name="todo">TODO</string>
    <string name="select_dob">select dob</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="is_panjabi_qualified">Have you qualified panjabi in matriculation or equivalent examination</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="qualifications">Qualifications</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="jobs">Jobs</string>
</resources>