<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FilterActivity">


    <LinearLayout
        android:id="@+id/linear_layout_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_btn_filter"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:fontFamily="@font/sf_pro"
            android:text="@string/filter" />

        <TextView
            android:id="@+id/apply_btn_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:textStyle="bold"
            android:fontFamily="@font/sf_pro"
            android:textSize="20sp"
            android:padding="10dp"
            android:gravity="end"/>
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_filter"
        android:background="@color/light_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qualifications"
                android:textSize="18sp"
                android:fontFamily="@font/sf_pro"
                android:layout_marginBottom="5dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_marginVertical="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:fontFamily="@font/sf_pro"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FilterButtonStyle"
                android:background="@drawable/btn_bg_1"
                android:text="@string/select_dob"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_marginVertical="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_panjabi_qualified"
                android:textSize="18sp"
                android:fontFamily="@font/sf_pro"
                android:layout_marginBottom="5dp"
                />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/panjabi_yes"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   style="@style/FilterButtonStyle"
                   android:background="@drawable/btn_bg_1"
                   android:text="@string/yes"/>
               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/panjabi_no"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   style="@style/FilterButtonStyle"
                   android:background="@drawable/btn_bg_1"
                   android:text="@string/no"/>
           </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>